--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
     "firebase": "^12.6.0",
+    "framer-motion": "^12.23.25",
     "hamburger-react": "^2.5.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -23,6 +24,7 @@
     "react-router": "^7.10.1",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.26.4",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
