--- a/package.json
+++ b/package.json
@@ -12,19 +12,29 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.12",
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "axios": "^1.13.2",
+    "clsx": "^2.1.1",
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.25",
     "hamburger-react": "^2.5.2",
+    "lucide-react": "^0.562.0",
+    "motion": "^12.25.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
     "react-loader-spinner": "^8.0.0",
     "react-router": "^7.10.1",
+    "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.26.4",
     "swiper": "^12.0.3",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
